--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<h1>Showing article details</h1>
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -9,6 +10,8 @@
   <strong>Description:</strong>
   <%= @article.description %>
 </p>
+
+
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
